--- a/auth.html
+++ b/auth.html
@@ -782,7 +782,7 @@
             const password = document.getElementById('login-password').value;
 
             try {
-                const response = await fetch('/api/auth/login', {
+                const response = await fetch('http://127.0.0.1:8080/api/auth/login', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -894,7 +894,7 @@
             }
 
             try {
-                const response = await fetch('/api/auth/register', {
+                const response = await fetch('http://127.0.0.1:8080/api/auth/register', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -997,7 +997,7 @@
         // Load social login providers
         async function loadSocialLoginButtons() {
             try {
-                const response = await fetch('/api/auth/oauth/providers');
+                const response = await fetch('http://127.0.0.1:8080/api/auth/oauth/providers');
                 const data = await response.json();
 
                 const container = document.getElementById('social-login-buttons');
@@ -1012,7 +1012,7 @@
                             hasConfiguredProviders = true;
                             const button = document.createElement('a');
                             button.className = `social-login-button ${providerId}`;
-                            button.href = `/api/auth/oauth/${providerId}`;
+                            button.href = `http://127.0.0.1:8080/api/auth/oauth/${providerId}`;
 
                             // Provider icons and names
                             const icons = {
